# AI_Audio_Separation

./: .gitignore  PLAN.md  README.md  ai_audio_separation.spec  pyproject.toml  requirements.txt
src/: __init__.py  app.py  main.py
src/core/: __init__.py  audio_player.py  exporter.py  mixer.py  pitch_tempo.py  separator.py
src/ui/: __init__.py  main_window.py  stem_mixer.py  theme.py  waveform_view.py
src/ui/widgets/: __init__.py  pitch_tempo_control.py  stem_control.py  transport_bar.py  volume_slider.py
src/utils/: __init__.py  audio_utils.py  file_utils.py
tests/: test_audio_player.py  test_mixer.py  test_separator.py
